# ifo

./: .chunkhound.json  .gitignore  .gitlab-ci.yml  .signing-info  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  api.py  geocoding.py  ifo.py
.github/workflows/: release.yml
src/: api.rs  error.rs  geocoding.rs  lib.rs  main.rs  models.rs
tests/: test_api.py  test_geocoding.py  test_ifo.py
